--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <main.basedir>${project.basedir}</main.basedir>
         <spring-boot-dependencies.version>2.3.1.RELEASE</spring-boot-dependencies.version>
         <lombok.version>1.18.4</lombok.version>
+        <firebase.version>6.14.0</firebase.version>
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
         <junit-platform-surefire.version>1.3.0</junit-platform-surefire.version>
     </properties>
@@ -49,12 +50,22 @@
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>${h2.version}</version>
-                <scope>test</scope>
+<!--                <scope>test</scope>-->
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.firebase</groupId>
+                <artifactId>firebase-admin</artifactId>
+                <version>${firebase.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>${spring-boot-dependencies.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
